# encrypt_static_html

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: encrypt.bat  encrypt.sh  index.html  styles.css
example/standalone/: index_encrypted.html
src/: lib.rs  lib_test.rs  main.rs  template.html
