[package]
name = "encrypt_static_html"
version = "0.1.0"
authors = ["Mathieu Guillame-Bert <achoum@gmail.com>"]
edition = "2021"
description = "A tool for encrypting a static HTML page, including its images and CSS, allowing for the page to be hosted securely on a static web server."
license = "Apache-2.0"
repository = "https://github.com/achoum/encrypt_static_html"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.13", features = ["derive"] }
handlebars = "6.0.0"
hex = "0.4.3"
hmac = "0.12.1"
infer = "0.16.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
scraper = "0.20.0"
serde_json = "1.0.122"
sha2 = "0.10.8"
tempfile = "3.10.1"
url = "2.5.2"

[dev-dependencies]
rstest = "0.22.0"
